# reviewAgent

./: .gitignore  Dockerfile  build_ast.py  checkFuncName.py  daily_log.txt  index.html  pyproject.toml  requirements.txt  review_engine.py  review_report.json  serve.py  structure.txt
analysis/: compile_commands.json
analysis/cmake_build/: CMakeCache.txt  build.ninja  cmake_install.cmake
app/: main.py
app/api/: build.py  policy.py  review.py
app/services/: policy_service.py  review_service.py
app/static/: index.html
config/: review_pipeline.yaml
docs/: ReviewAgent.drawio  Software Coding Standard 1.docx  Software Configuration Management Plan.docx  daily_log.txt  dummy.yaml  functions_c_h 1.py  review_results.json  structure.txt
policies/: default.yaml
review_mcp/: server.py  test.py
review_mcp/client/: review_client.py
review_mcp/skills/: agent_context.md  builder.md  optimizer.md  reviewer.md
review_mcp/tools/: review_project.py
review_mcp/utils/: config.py  review_formatter.py
soc/: .clang-format  CMakeLists.txt  clean-up.bat  cmake-build.bat  review_results.json  review_results_working.json
soc/absdef/src/: CMakeLists.txt  abs_typedefs.h
soc/absdef/toolchain_cfg/: mpc5744p_gcc_toolchain.cmake  s32k344_ghs_toolchain.cmake
soc/analysis/: compile_commands.json
soc/analysis/cmake_build/: CMakeCache.txt  build.ninja  cmake_install.cmake
soc/analysis/cmake_build/absdef/: cmake_install.cmake
soc/analysis/cmake_build/app/: cmake_install.cmake
soc/analysis/cmake_build/bs_cfg/soc_cfg/: cmake_install.cmake
soc/analysis/cmake_build/s32k344-freertos/src/: cmake_install.cmake
soc/analysis/cmake_build/s32k344-mcal/src/: cmake_install.cmake
soc/analysis/cmake_build/src/: cmake_install.cmake
soc/app/: app.h
soc/cfg/: soc_cfg.h.tmp
soc/design/: README.md  soc.qeax
soc/design/Model/: soc.sldd  soc.slx
soc/design/ReferenceSubsystems/: CoulombCounting_Subsys.slx  OcvBasedSocCalc_Subsys.slx  SocCorrection_SubSys.slx
soc/docs/: README.md  SOC User Manual.docx
soc/s32k344-freertos/src/: CMakeLists.txt
soc/s32k344-freertos/src/freertos_hooks/: freertos_hooks.h
soc/s32k344-freertos/src/portable/GHS/ARM_CM7/r0p1/: portmacro.h
soc/s32k344-mcal/design/: adcsar-mcal.xml  emios_pwm-mcal.xml  intctrl-mcal.xml  lpspi-mcal.xml  pit-mcal.xml  siul2-mcal.xml  siul2_dio-mcal.xml
soc/s32k344-mcal/docs/: S32K344-MCAL Release_Notes.docx
soc/s32k344-mcal/src/: CMakeLists.txt
soc/s32k344-mcal/src/Project_Settings/Linker_files/: linker_flash_s32k344.ld  linker_ram_s32k344.ld
soc/s32k344-mcal/src/Project_Settings/Startup_Code/: Vector_Table.s  core_specific.h  nvic.h  sys_init.h  system.c
soc/s32k344-mcal/src/board/: Siul2_Port_Ip_Cfg.c  Siul2_Port_Ip_Cfg.h  Tspc_Port_Ip_Cfg.c  Tspc_Port_Ip_Cfg.h
soc/s32k344-mcal/src/generate/include/: Axbs_Ip_Cfg.h  Axbs_Ip_PBcfg.h  C40_Ip_Cfg.h  CDD_Rm_Cfg.h  CDD_Rm_Ipw_Cfg.h  CDD_Rm_Ipw_PBcfg.h  CDD_Rm_PBcfg.h  Clock_Ip_Cfg_Defines.h  Dma_Ip_Cfg.h  Dma_Ip_Cfg_Defines.h  Dma_Ip_Sa_PBcfg.h  Fee_Cfg.h  FlexCAN_Ip_Sa_PBcfg.h  Lpspi_Ip_Sa_PBcfg.h  MemAcc_Cfg.h  MemAcc_PBcfg.h  Mem_43_INFLS_CfgDefines.h  Mscm_Ip_Cfg.h  Mscm_Ip_Cfg_Defines.h  Mscm_Ip_PBcfg.h  Pflash_Ip_Cfg.h  Pflash_Ip_PBcfg.h  Pit_Ip_Cfg.h  Siul2_Dio_Ip_Cfg.h  Siul2_Icu_Ip_Cfg.h  Siul2_Icu_Ip_SA_PBcfg.h  Siul2_Port_Ip_Defines.h  Stm_Ip_SA_PBcfg.h  Virt_Wrapper_Ip_Cfg.h  Virt_Wrapper_Ip_PBcfg.h  Xbic_Ip_Cfg.h  Xbic_Ip_PBcfg.h  Xrdc_Ip_Cfg.h  Xrdc_Ip_PBcfg.h
soc/s32k344-mcal/src/generate/src/: Adc_Sar_Ip_PBcfg.c  Axbs_Ip_PBcfg.c  CDD_Rm_Ipw_PBcfg.c  Dma_Mux_Ip_PBcfg.c  Fee_Cfg.c  MemAcc_PBcfg.c  Pit_Ip_SA_PBcfg.c
soc/s32k344-mcal/src/mcal-base/header/: S32K344_MPU.h  S32K344_NVIC.h
soc/s32k344-mcal/src/mcal-base/include/: Adc_MemMap.h  BaseNXP.h  Bcc_775a_MemMap.h  CanIf_MemMap.h  CanTrcv_43_AE_MemMap.h  Can_43_FLEXCAN_MemMap.h  Can_43_LLCE_MemMap.h  ComStackTypes.h  ComStack_Types.h  Compiler.h  Crc_MemMap.h  Crypto_43_ACE_MemMap.h  Crypto_43_HSE_MemMap.h  Crypto_MemMap.h  Det_MemMap.h  Dio_MemMap.h  Dpga_MemMap.h  Ecum_MemMap.h  EthTrcv_43_PHY_MemMap.h  EthTrcv_43_TJA110X_MemMap.h  Eth_43_GMAC_MemMap.h  Etpu_MemMap.h  Fee_MemMap.h  Fr_43_LLCE_MemMap.h  Fr_MemMap.h  Gd3162_MemMap.h  Gpt_MemMap.h  I2c_MemMap.h  I2s_MemMap.h  Icu_MemMap.h  LinTrcv_43_AE_MemMap.h  LinTrcv_43_fs65_MemMap.h  Lin_43_LLCE_MemMap.h  Mcl_MemMap.h  Mcu_MemMap.h  Mem_43_EEP_MemMap.h  Mem_43_INFLS_MemMap.h  MotorControl_MemMap.h  OsIf_DeviceRegisters.h  OsIf_Internal.h  (+15 more)
soc/src/: CMakeLists.txt  README.md  soc.h  soc_model.c  soc_model.h
soc/test/mil/specification/: soc_MIL_TestCases.xlsx
soc/test/unit/project/vcast-proj/environment/SOC/: SOC.cfg  SOC.env
soc/test/unit/vcast-setup/: Start_VectorCAST.bat  set_env.bat  start_vscode.bat
soc/test/unit/vcast-setup/support_files/: Execute_iSystem.bat  Execute_iSystem_Debug.bat  vcast_ut.slo
src/orchestrator/: build.py  config.py  runner.py  workspace.py
src/repo_build/: __init__.py  builder.py  models.py  parser.py  reporter.py  runner.py
src/repo_review/: __init__.py  ast_builder.py  ast_compile_db.py  code_review_validators.py  config_loader.py  firmware_build.py  main.py  (+7 more)
workspace/runs/20260527_223522_f0a9298f/source/bs_cfg/soc_cfg/: CMakeLists.txt
(+214 files in other folders)
